@@ -1,5 +1,5 @@
 /****************************************************************************
- * examples/hello/main.c
+ * examples/hello/hello_main.c
  *
  *   Copyright (C) 2008, 2011-2012 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
