@@ -1,5 +1,5 @@
 /****************************************************************************
- * examples/usbserial/main.c
+ * examples/usbserial/usbserial_main.c
  *
  *   Copyright (C) 2008, 2010-2012 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
