@@ -1,5 +1,5 @@
 /****************************************************************************
- * examples/discover/main.c
+ * netutils/discover/discover.c
  *
  *   Copyright (C) 2012 Max Holtzberg. All rights reserved.
  *   Copyright (C) 2008, 2011-2012 Gregory Nutt. All rights reserved.
